# web-framework-benchmark

./: .gitignore  README.md  docker-compose.yml
api-actix/: .env.example  Cargo.toml  Dockerfile
api-actix/src/: main.rs
api-elysia/: .env.example  Dockerfile  package.json
api-elysia/src/: index.ts
api-express/: .env.example  package.json
api-express/src/: index.js
api-fastify/: .env.example  package.json
api-fastify/src/: index.js
api-gin/: .env.example  Dockerfile  go.mod  main.go
docs/: justificativa-ferramentas.md
scripts/: analyze-results.py  check-prerequisites.sh  find-saturation.py  init.sql  load-test-energy.js  load-test-saturation.js  load-test.js  run-benchmark.sh  run-experiment.sh
